--- a/report/MigrationReport.jrxml
+++ b/report/MigrationReport.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="MigrationReport" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="70"/>
+	<property name="ireport.y" value="144"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -49,7 +49,7 @@
 			<staticText>
 				<reportElement x="0" y="82" width="555" height="39"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="Segoe UI Light" size="22" isBold="true"/>
+					<font fontName="Arial" size="22" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Relatório de migração]]></text>
 			</staticText>
@@ -179,23 +179,23 @@
 		<band height="35" splitType="Stretch"/>
 	</pageHeader>
 	<columnHeader>
-		<band height="20" splitType="Stretch">
+		<band height="33" splitType="Stretch">
 			<staticText>
-				<reportElement style="table_TH" x="113" y="0" width="123" height="20"/>
+				<reportElement style="table_TH" x="0" y="13" width="236" height="20"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tipo de dado migrado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="table_TH" x="236" y="0" width="100" height="20"/>
+				<reportElement style="table_TH" x="236" y="13" width="163" height="20"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total cadastrado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement style="table_TH" x="336" y="0" width="100" height="20"/>
+				<reportElement style="table_TH" x="399" y="13" width="156" height="20"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
@@ -206,19 +206,19 @@
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement style="table_TD" x="113" y="0" width="123" height="20"/>
+				<reportElement style="table_TD" x="0" y="0" width="236" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[  $F{nome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="table_TD" x="236" y="0" width="100" height="20"/>
+				<reportElement style="table_TD" x="236" y="0" width="163" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{totalCadastrado}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{totalCadastrado}  ]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement style="table_TD" x="336" y="0" width="100" height="20"/>
+				<reportElement style="table_TD" x="399" y="0" width="156" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{totalIncluido}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{totalIncluido}  ]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
